defining navigation css

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             />
             <ul class="nav" id="nav">
               <li class="exit" id="exit-btn">
-                <img src="images/exit.svg" alt="exit menu" />
+                <a href="#"><img src="images/exit.svg" alt="exit menu" /></a>
               </li>
               <li class="active"><a href="index.html">Home</a></li>
               <li><a href="cabins.html">Cabins</a></li>
