--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
               <p class="test-desc">
                 "My family and I absolutely love our cabin vacation!"
               </p>
-              <p class="  ">--John Doe</p>
+              <p class="test-auth">--John Doe</p>
             </div>
           </li>
           <li>
