defining and styling sub page

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Forest Vacations</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css"
@@ -178,7 +178,8 @@
         </ul>
       </div>
     </div>
-    <img src="images/fern.svg" alt="fern" class="fern" />
+    <!-- <img src="images/fern.svg" alt="fern" class="fern" /> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.4/gsap.min.js"></script>
     <script type="module" src="index.js"></script>
   </body>
 </html>
